@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST likwid-3.0.0.tar.gz 458629 SHA256 968ea55497af9971b20295b5290f355e9b4054bcbcfac91bfeaca8c1f5f1b72e SHA512 4227a91822f7e452b5172b2a203d4e9c04327d7d6139ccdf1e7f2f0dcb372dd7e98c9ac2f9b55c768fc1c9e59973d5afbfd038757247b462b9a02038c78b5ab2 WHIRLPOOL 4e270a931b923e44ff2dad94891f4668ee89d95aed3635e81a3a644c40821bf41fec2c6d1d9199eff7a319b9b7d9fb4f88d2f559b797f808bc830a1ffc67bac1
+DIST likwid-3.1.3.tar.gz 605675 SHA256 05078ec55dce3d4cf1c94832bd289ccbcaee7bdee9a1ea9f6681ccd3f59ece5b SHA512 e31b4498e702d4ddf61e3c123d43f0804ef4cef149bb3732b61e3894aa9d76feb7a2654bbb0467dd30323031122ea01cf17e4f01a33f193e750cdbdfc09741d7 WHIRLPOOL bccfcc68e792f09a66eab99affa81250fbe34d4759a81a4e0bd0af2535e5bb09229bee4bc165986559d14101183e5be9a933273ec9f1a7c5c8da3f97f07f9e8e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJSoQFoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUW30pXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB591KkQALNCIGzIJ46J4kiL5TrqgtQy
-wl9sHObh/tv7Rh0ajUhQSWDGQVHDvOIldvGF5cyi0l4jGVHqtFSDY5l7WXadxXXF
-t+SJNxbI5p+hD8KKO9/wOWuPMG8DQ4GNvwaLFZdTQcVnM2lrBNwKg9UAwMTL963T
-6YqiYS2x3BrUJazno00wD1GDZLjUD3Avm/Ih5yBKsuyYKdT42/fiTLwNOYdOxHjZ
-LozNz82CdKlSdK40vUQvpvaEP0LHfBw782Xl7D+e+haE10xknAP8i/TQSgkP/TgC
-nOkdqA+TjKqVBKbM59BYG2TLz0ENOc8Q25G4DAzNk/ySy4Uyb9OTmZvChqXpnT0c
-AWgZ/miMKhb5lOx3BkdQPyC2wfG5cI3wRzE8yzJT5Qusw5fDtuCOxp8WlzHr9f7+
-KnCEa9JMq0E/Ny6t0Q677hsZnReM7PezBwPESheThWJf65FKnh7wUD77Vl/ve9gU
-3mydNnJZj9uVb83RAIKUVG259qY1qa+dgkCUmtr0ef+d9AALocLLBY+AJf2k4Nr/
-bN1U1FIo6mQLymYtF3hrVhRoVVwD9+BKGgmGDDQGXQwlSJrDrwwbRlE7WXBKqLPM
-lBDM4orGFaHiIiK8gnqlyG2N09NA1X6C+9cOk/BDeNQqUNeOtj3V5wmomSSWl5O0
-dIldIGNeVgkwd6+nygpP
-=XmiN
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59eicP/1C2OCrUyYnv1OIlRWC9Oypr
+57puVWlOf03W8IraD88b+GPMpkuqOIYxqhMGoymqPhpokBe254l/wYW6FyLZGGzu
+GpT9cPD3+bZUDQayG9VBaKNKl7ZUMo90W4C9izhL7HOkbZ8n4qSATRibDrKw639Q
+bX61MIlF0TPQzQVV9RaHX/AaXgYefPqSZG+7ahhWfwQo5vprI/l7+ntBml0AxQml
+UquB4jIEY03/HBN7ZlJpkidzx7yD3qAi5AW3VPK+Km65SuwKd/OY14J/xsZ/qgP3
+Z0EglKHj+e1RoCVVw1nYTgqOGmPzTR61g6Qyg9hqZU24SENHTIM6xsPZftZiXVQs
+98Gf9JLTOfP/LyREpp0BBlPGciK+1idoE3oei4i7PtokMSsnuw35fTAahgC299dh
+CPbGinh60RAPhGSrSV/G+MBjppQjZwKIhpLsUKqb3obogo5ci/aVtW+hXWPzfcqt
+ymYzLjiW+moja4FpwgFHEbFp1sMHTB8IksnOPL0RArYLIoKrt2H9wIDvZPoIXc8y
+eDBw1x8EllQQHKtgd2fwjsd1PzSLAtXmSXhk5mLeisdEsg7iQO076Oy1829Jxgo3
+YAF2ESU0BI1/eRvsZNqAUCWtvUyk7EIvVa6bgiPwK4MkRbAVkYSkA6am1rQEgYIT
+Rl0aK+FfMIHj1oYs2+8+
+=5xfW
 -----END PGP SIGNATURE-----
