@@ -1,3 +1,9 @@
+*likwid-3.1.3 (06 Nov 2014)
+
+  06 Nov 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +likwid-3.1.3.ebuild, -likwid-3.0.0.ebuild:
+  sys-apps/likwid: version bump
+
   10 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   likwid-3.0.0.ebuild:
   sys-apps/likwid: honor LDFLAGS & set SONAMEs
